force-app/main/default/objects/WhatsApp_Message__c/WhatsApp_Message__c.object-meta.xml
<CustomObject>
    <description>Logs every WhatsApp message sent or received via the Zaptilo plugin. One record per direction.</description>
    <label>WhatsApp Message</label>
    <nameField>
        <displayFormat>WAM-{0000000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>