force-app/main/default/objects/WhatsApp_Message__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>The message body. For template messages, this is the rendered text after merging variables.</description>
    <label>Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>