force-app/main/default/objects/WhatsApp_Message__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Outbound = sent from Salesforce. Inbound = received from customer via Zaptilo webhook.</description>
    <label>Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Outbound</fullName><default>true</default><label>Outbound</label></value>
            <value><fullName>Inbound</fullName><default>false</default><label>Inbound</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>