force-app/main/default/objects/WhatsApp_Message__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Zaptilo / Meta message ID. Used to correlate webhook status updates and inbound replies back to this record.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>