force-app/main/default/objects/WhatsApp_Message__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Recipient phone number in E.164 format (e.g. +919876543210).</description>
    <label>Phone</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>