force-app/main/default/objects/WhatsApp_Message__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Delivery status reported by Zaptilo / Meta.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>queued</fullName><default>true</default><label>Queued</label></value>
            <value><fullName>sent</fullName><default>false</default><label>Sent</label></value>
            <value><fullName>delivered</fullName><default>false</default><label>Delivered</label></value>
            <value><fullName>read</fullName><default>false</default><label>Read</label></value>
            <value><fullName>failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>received</fullName><default>false</default><label>Received</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>