force-app/main/default/objects/WhatsApp_Message__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>The WhatsApp template name used for this send. Blank for free-form messages.</description>
    <label>Template Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>